# sipin-sip-state-updater

./: .copier-answers.yml  .env.example  Dockerfile  README.md  config.yml  main.py  pyproject.toml
.openshift/: Jenkinsfile  Makefile  sipin-sip-state-updater-multibranch-pipeline.xml  sipin-sip-state-updater-template.yml
app/: __init__.py  app.py  config.py
app/services/: db.py  mam.py  pulsar.py
tests/: test_app.py
